--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ kotlinx-coroutines = "1.10.1"
 kotlinxSerializationJson = "1.8.0"
 ktorVersion = "3.1.1"
 ktorfitVersion = "2.4.0"
+multiplatformSettingsNoArg = "1.3.0"
 navigationCompose = "2.8.0-alpha10"
 material3Android = "1.3.1"
 animationAndroid = "1.7.8"
@@ -57,6 +58,7 @@ ktorfit-lib = { module = "de.jensklingenberg.ktorfit:ktorfit-lib", version.ref =
 androidx-animation-android = { group = "androidx.compose.animation", name = "animation-android", version.ref = "animationAndroid" }
 androidx-ui-android = { group = "androidx.compose.ui", name = "ui-android", version.ref = "uiAndroid" }
 androidx-runtime-android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "runtimeAndroid" }
+multiplatform-settings-no-arg = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "multiplatformSettingsNoArg" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
