feat: Implement Navigation, Authentication, and UI Enhancements
- **Color Palette:** Added a color palette for consistent theming.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,8 @@ material3Android = "1.3.1"
 animationAndroid = "1.7.8"
 uiAndroid = "1.7.8"
 runtimeAndroid = "1.7.8"
+lifecycleViewmodelAndroid = "2.8.7"
+foundationAndroid = "1.7.8"
 
 [libraries]
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
@@ -59,6 +61,8 @@ androidx-animation-android = { group = "androidx.compose.animation", name = "ani
 androidx-ui-android = { group = "androidx.compose.ui", name = "ui-android", version.ref = "uiAndroid" }
 androidx-runtime-android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "runtimeAndroid" }
 multiplatform-settings-no-arg = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "multiplatformSettingsNoArg" }
+androidx-lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroid" }
+androidx-foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "foundationAndroid" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
