--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,33 +4,34 @@ android-compileSdk = "35"
 android-minSdk = "24"
 android-targetSdk = "35"
 androidx-activityCompose = "1.10.1"
-androidx-appcompat = "1.7.0"
+androidx-appcompat = "1.7.1"
 androidx-constraintlayout = "2.2.1"
 androidx-core-ktx = "1.16.0"
 androidx-espresso-core = "3.6.1"
-androidx-lifecycle = "2.8.4"
+androidx-lifecycle = "2.9.1"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
-compose-multiplatform = "1.8.1"
+compose-multiplatform = "1.8.2"
 filekitDialogs = "0.10.0-beta04"
 junit = "4.13.2"
-koin = "4.1.0-Beta5"
-kotlin = "2.1.20"
-kotlinxDatetime = "0.6.0"
-kotlinx-coroutines = "1.10.1"
-kotlinxSerializationJson = "1.8.0"
-ktorVersion = "3.1.1"
+koin = "4.1.0"
+kotlin = "2.1.21"
+ksp = "2.1.21-2.0.1"
+kotlinxDatetime = "0.6.2"
+kotlinx-coroutines = "1.10.2"
+kotlinxSerializationJson = "1.8.1"
+ktorVersion = "3.1.3"
 ktorfitVersion = "2.5.2"
-multiplatformMarkdownRendererM3 = "0.32.0"
+multiplatformMarkdownRendererM3 = "0.35.0"
 multiplatformSettingsNoArg = "1.3.0"
 navigationCompose = "2.8.0-alpha13"
 material3Android = "1.3.2"
-animationAndroid = "1.8.2"
-uiAndroid = "1.8.2"
-runtimeAndroid = "1.8.2"
-lifecycleViewmodelAndroid = "2.9.0"
-foundationAndroid = "1.8.2"
-uiGeometryAndroid = "1.8.2"
+animationAndroid = "1.8.3"
+uiAndroid = "1.8.3"
+runtimeAndroid = "1.8.3"
+lifecycleViewmodelAndroid = "2.9.1"
+foundationAndroid = "1.8.3"
+uiGeometryAndroid = "1.8.3"
 composeIcons = "1.1.1"
 
 [libraries]
@@ -85,3 +86,4 @@ composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-mu
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 ktorfitPlugin = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfitVersion" }
+kspGradlePlugin = { id = "com.google.devtools.ksp", version.ref = "ksp" }
