--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 agp = "8.10.1"
-android-compileSdk = "35"
+android-compileSdk = "36"
 android-minSdk = "24"
-android-targetSdk = "35"
+android-targetSdk = "36"
 androidx-activityCompose = "1.10.1"
 androidx-appcompat = "1.7.1"
 androidx-constraintlayout = "2.2.1"
@@ -24,7 +24,8 @@ ktorVersion = "3.1.3"
 ktorfitVersion = "2.5.2"
 multiplatformMarkdownRendererM3 = "0.35.0"
 multiplatformSettingsNoArg = "1.3.0"
-navigationCompose = "2.8.0-alpha13"
+navigationCompose = "2.9.0-beta03"
+navigation3 = "1.0.0-alpha04"
 material3Android = "1.3.2"
 animationAndroid = "1.8.3"
 uiAndroid = "1.8.3"
@@ -33,6 +34,7 @@ lifecycleViewmodelAndroid = "2.9.1"
 foundationAndroid = "1.8.3"
 uiGeometryAndroid = "1.8.3"
 composeIcons = "1.1.1"
+navigation3Runtime = "1.0.0-alpha04"
 
 [libraries]
 filekit-coil = { module = "io.github.vinceglb:filekit-coil", version.ref = "filekitDialogs" }
@@ -54,6 +56,11 @@ androidx-material = { group = "com.google.android.material", name = "material", 
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+#androidx-navigation3-runtime = { module = "androidx.navigation3:navigation-runtime", version.ref = "navigation3" }
+#androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "navigation3" }
+androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "navigation3" }
+androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "navigation3" }
+
 androidx-lifecycle-viewmodel = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
@@ -78,6 +85,7 @@ androidx-foundation-android = { group = "androidx.compose.foundation", name = "f
 androidx-ui-geometry-android = { group = "androidx.compose.ui", name = "ui-geometry-android", version.ref = "uiGeometryAndroid" }
 
 composeIcons-lineAwesome = { module = "br.com.devsrsouza.compose.icons:line-awesome", version.ref = "composeIcons" }
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
