--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ ktorfitVersion = "2.5.2"
 multiplatformMarkdownRendererM3 = "0.35.0"
 multiplatformSettingsNoArg = "1.3.0"
 navigationCompose = "2.9.0-beta03"
-navigation3 = "1.0.0-alpha04"
+composeAdaptive = "1.1.2"
 material3Android = "1.3.2"
 animationAndroid = "1.8.3"
 uiAndroid = "1.8.3"
@@ -34,7 +34,6 @@ lifecycleViewmodelAndroid = "2.9.1"
 foundationAndroid = "1.8.3"
 uiGeometryAndroid = "1.8.3"
 composeIcons = "1.1.1"
-navigation3Runtime = "1.0.0-alpha04"
 
 [libraries]
 filekit-coil = { module = "io.github.vinceglb:filekit-coil", version.ref = "filekitDialogs" }
@@ -56,6 +55,10 @@ androidx-material = { group = "com.google.android.material", name = "material", 
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+compose-adaptive = {module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "composeAdaptive"}
+compose-adaptive-layout = {module = "org.jetbrains.compose.material3.adaptive:adaptive-layout", version.ref = "composeAdaptive"}
+compose-adaptive-navigation = {module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "composeAdaptive"}
+
 
 androidx-lifecycle-viewmodel = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
